@@ -19,6 +19,7 @@
   * Generalized the computeUVW() and computeUVTrack() functions
   * Added a disk-based cache to the lsl.misc.geodesy module to help keep network traffic down
   * Added support for reading and writing UVFITS files
+  * Added support for reading CASA measurement sets via pyrap
 
 0.6.6
   * Fixed a problem with older NumPy installs not having a close() function
